updated NOTE for added weta content

--- a/_includes/CompSciGraphics_pg.html
+++ b/_includes/CompSciGraphics_pg.html
@@ -15,21 +15,21 @@
         
       <li><div class="nav-button"> 
          <form action="../index.html" method="get" target="_self" >
-          <button class="nav-button" <span><image   src="../assets/icon/home.svg" /><br>
+          <button class="nav-button" >  <span><image   src="../assets/icon/home.svg" /><br>
 Home </span>
           </button>
         </form></div>
         
              <li><div class="nav-button"> 
          <form action="ProdDesign_pg.html" method="get" target="_self" >
-          <button class="nav-button" <span><image   src="../assets/icon/design.svg" /><br>
+          <button class="nav-button" >  <span><image   src="../assets/icon/design.svg" /><br>
 Product Design</span>
           </button>
         </form></div>
         
                      <li><div class="nav-button"> 
          <form action="CompSci_pg.html" method="get" target="_self" >
-          <button class="nav-button" <span><image   src="../assets/icon/compsci.svg" /><br>
+          <button class="nav-button"  > <span><image   src="../assets/icon/compsci.svg" /><br>
 Computer Science</span>
           </button>
         </form></div>
@@ -38,7 +38,7 @@ Computer Science</span>
 
                              <li><div class="nav-button"> 
          <form action="CompSciGraphics_pg.html" method="get" target="_self" >
-          <button class="nav-button" <span><image   src="../assets/icon/graphics.svg" /><br>
+          <button class="nav-button"  > <span><image   src="../assets/icon/graphics.svg" /><br>
 Computer Graphics Work</span>
           </button>
         </form></div>
@@ -47,7 +47,7 @@ Computer Graphics Work</span>
         
                              <li><div class="nav-button"> 
          <form action="links_pg.html" method="get" target="_self" >
-          <button class="nav-button" <span><image   src="../assets/icon/hobbies.svg" /><br>
+          <button class="nav-button"  > <span><image   src="../assets/icon/hobbies.svg" /><br>
 My hobbies: Exhibion of me</span>
           </button>
         </form></div>
@@ -81,7 +81,7 @@ My hobbies: Exhibion of me</span>
 	</div>
       <div class="inner-frame">
         <div class="center">
-          <p class="disclaimer"> Note: If your brower is not up-to-date github will incorrectly render the page.</p>
+          <p class="disclaimer"> Note: If your brower is not up-to-date github will incorrectly render the page. Plugins work best on Firefox!</p>
              </div>
 		   <div class="text">
     <!-- Content -->
