--- a/_includes/CompSci_pg.html
+++ b/_includes/CompSci_pg.html
@@ -35,21 +35,21 @@
         
     <li><div class="nav-button"> 
        <form action="../index.html" method="get" target="_self" >
-        <button class="nav-button" <span><image   src="../assets/icon/home.svg" /><br>
+        <button class="nav-button" >  <span><image   src="../assets/icon/home.svg" /><br>
 Home </span>
         </button>
       </form></div>
       
            <li><div class="nav-button"> 
        <form action="ProdDesign_pg.html" method="get" target="_self" >
-        <button class="nav-button" <span><image   src="../assets/icon/design.svg" /><br>
+        <button class="nav-button" >  <span><image   src="../assets/icon/design.svg" /><br>
 Product Design</span>
         </button>
       </form></div>
       
                    <li><div class="nav-button"> 
        <form action="CompSci_pg.html" method="get" target="_self" >
-        <button class="nav-button" <span><image   src="../assets/icon/compsci.svg" /><br>
+        <button class="nav-button" >  <span><image   src="../assets/icon/compsci.svg" /><br>
 Computer Science</span>
         </button>
       </form></div>
@@ -58,7 +58,7 @@ Computer Science</span>
 
                            <li><div class="nav-button"> 
        <form action="CompSciGraphics_pg.html" method="get" target="_self" >
-        <button class="nav-button" <span><image   src="../assets/icon/graphics.svg" /><br>
+        <button class="nav-button" >  <span><image   src="../assets/icon/graphics.svg" /><br>
 Computer Graphics Work</span>
         </button>
       </form></div>
@@ -67,7 +67,7 @@ Computer Graphics Work</span>
       
                            <li><div class="nav-button"> 
        <form action="links_pg.html" method="get" target="_self" >
-        <button class="nav-button" <span><image   src="../assets/icon/hobbies.svg" /><br>
+        <button class="nav-button" >  <span><image   src="../assets/icon/hobbies.svg" /><br>
 My hobbies: Exhibion of me</span>
         </button>
       </form></div>
@@ -80,7 +80,7 @@ My hobbies: Exhibion of me</span>
 
      <li><div class="nav-button"> 
        <form action="https://raw.githubusercontent.com/TheTriangleTrippa/Portfolio/5ac76c2d99d8d941c1ced57cc7c362c4fdcf9eac/LIAM-MAY-CV.pdf" method="get" target="_blank" >
-        <button class="nav-button" <span><image   src="../assets/icon/cv.svg" /><br>
+        <button class="nav-button" >  <span><image   src="../assets/icon/cv.svg" /><br>
 My CV</span>
         </button>
       </form></div>    
@@ -104,7 +104,7 @@ My CV</span>
 	</div>
     <div class="inner-frame">
       <div class="center">
-        <p class="disclaimer"> Note: If your brower is not up-to-date github will incorrectly render the page.</p>
+        <p class="disclaimer"> Note: If your brower is not up-to-date github will incorrectly render the page. Plugins work best on Firefox!</p>
            </div>
      <div class="text">
     <!-- Content -->
