--- a/_includes/ProdDesign_pg.html
+++ b/_includes/ProdDesign_pg.html
@@ -61,21 +61,21 @@ div.athc_bx4 {
         
       <li><div class="nav-button"> 
          <form action="../index.html" method="get" target="_self" >
-          <button class="nav-button" <span><image   src="../assets/icon/home.svg" /><br>
+          <button class="nav-button" >  <span><image   src="../assets/icon/home.svg" /><br>
 Home </span>
           </button>
         </form></div>
         
              <li><div class="nav-button"> 
          <form action="ProdDesign_pg.html" method="get" target="_self" >
-          <button class="nav-button" <span><image   src="../assets/icon/design.svg" /><br>
+          <button class="nav-button"  > <span><image   src="../assets/icon/design.svg" /><br>
 Product Design</span>
           </button>
         </form></div>
         
                      <li><div class="nav-button"> 
          <form action="CompSci_pg.html" method="get" target="_self" >
-          <button class="nav-button" <span><image   src="../assets/icon/compsci.svg" /><br>
+          <button class="nav-button"  > <span><image   src="../assets/icon/compsci.svg" /><br>
 Computer Science</span>
           </button>
         </form></div>
@@ -84,7 +84,7 @@ Computer Science</span>
 
                              <li><div class="nav-button"> 
          <form action="CompSciGraphics_pg.html" method="get" target="_self" >
-          <button class="nav-button" <span><image   src="../assets/icon/graphics.svg" /><br>
+          <button class="nav-button" >  <span><image   src="../assets/icon/graphics.svg" /><br>
 Computer Graphics Work</span>
           </button>
         </form></div>
@@ -93,7 +93,7 @@ Computer Graphics Work</span>
         
                              <li><div class="nav-button"> 
          <form action="links_pg.html" method="get" target="_self" >
-          <button class="nav-button" <span><image   src="../assets/icon/hobbies.svg" /><br>
+          <button class="nav-button" >  <span><image   src="../assets/icon/hobbies.svg" /><br>
 My hobbies: Exhibion of me</span>
           </button>
         </form></div>
@@ -106,7 +106,7 @@ My hobbies: Exhibion of me</span>
       
      <li><div class="nav-button"> 
          <form action="https://raw.githubusercontent.com/TheTriangleTrippa/Portfolio/5ac76c2d99d8d941c1ced57cc7c362c4fdcf9eac/LIAM-MAY-CV.pdf" method="get" target="_blank" >
-          <button class="nav-button" <span><image   src="../assets/icon/cv.svg" /><br>
+          <button class="nav-button" >  <span><image   src="../assets/icon/cv.svg" /><br>
  My CV</span>
           </button>
         </form></div>
@@ -129,7 +129,7 @@ My hobbies: Exhibion of me</span>
 	
   <div class="inner-frame">
     <div class="center">
-      <p class="disclaimer"> Note: If your brower is not up-to-date github will incorrectly render the page.</p>
+      <p class="disclaimer"> Note: If your brower is not up-to-date github will incorrectly render the page. Plugins work best on Firefox!</p>
          </div>
 	   <div class="text">
     <!-- Content section -->
@@ -147,10 +147,10 @@ My hobbies: Exhibion of me</span>
   </p>
 
       <div class="design-image">
-        <div class="image-item-start"> <img class="product-design" src="../assets/img/front.png">     </div>
-           <div>  <img class="product-design" src="../assets/img/fulllineTexCamel.png">     </div>
-           <div>  <img class="product-design" src="../assets/img/fullineColourCamel.png">     </div>
-          <div >   <img class="product-design" src="../assets/img/creaseRenders.png">     </div>     </div>
+        <div class="image-item-start"> <img class="product-design" src="../assets/img/frgont.png">     </div>
+           <div>  <img class="product-design" src="../assets/img/fulllinegTexCamel.png">     </div>
+           <div>  <img class="product-design" src="../assets/img/fullineCoglourCamel.png">     </div>
+          <div >   <img class="product-design" src="../assets/img/creaseRegnders.png">     </div>     </div>
        
 
       </details>
@@ -171,10 +171,10 @@ My hobbies: Exhibion of me</span>
   </p>
 
       <div class="design-image">
-        <div class="image-item-start"> <img class="product-design" src="../assets/img/front.png">     </div>
-           <div>  <img class="product-design" src="../assets/img/fulllineTexCamel.png">     </div>
-           <div>  <img class="product-design" src="../assets/img/fullineColourCamel.png">     </div>
-          <div >   <img class="product-design" src="../assets/img/creaseRenders.png">     </div>     </div>
+        <div class="image-item-start"> <img class="product-design" src="../assets/img/frognt.png">     </div>
+           <div>  <img class="product-design" src="../assets/img/fulllineTexCagmel.png">     </div>
+           <div>  <img class="product-design" src="../assets/img/fullineCoglourCamel.png">     </div>
+          <div >   <img class="product-design" src="../assets/img/creaseRgenders.png">     </div>     </div>
       
 
 
