updated buttons hobbies for added weta content

--- a/_includes/ProdDesign_pg.html
+++ b/_includes/ProdDesign_pg.html
@@ -92,9 +92,9 @@ Computer Graphics Work</span>
 
         
                              <li><div class="nav-button"> 
-         <form action="links_pg.html" method="get" target="_self" >
+         <form action="ProdDesign_pg.html" method="get" target="_self" >
           <button class="nav-button" >  <span><image   src="../assets/icon/hobbies.svg" /><br>
-My hobbies: Exhibion of me</span>
+            My hobbies: Exhibition of me</span>
           </button>
         </form></div>
         
