plugin browser disclaimer update

--- a/_includes/CompSci_pg.html
+++ b/_includes/CompSci_pg.html
@@ -104,7 +104,7 @@ My CV</span>
 	</div>
     <div class="inner-frame">
       <div class="center">
-        <p class="disclaimer"> Note: If your brower is not up-to-date github will incorrectly render the page. Plugins work best on Firefox!</p>
+        <p class="disclaimer"> Note: If your brower is not up-to-date github will incorrectly render the page. Plugins might load differently between browsers!</p>
            </div>
      <div class="text">
     <!-- Content -->
