--- a/_includes/ProdDesign_pg.html
+++ b/_includes/ProdDesign_pg.html
@@ -129,7 +129,7 @@ Computer Graphics Work</span>
 	
   <div class="inner-frame">
     <div class="center">
-      <p class="disclaimer"> Note: If your brower is not up-to-date github will incorrectly render the page. Plugins work best on Firefox!</p>
+      <p class="disclaimer"> Note: If your brower is not up-to-date github will incorrectly render the page. Plugins might load differently between browsers!</p>
          </div>
 	   <div class="text">
     <!-- Content section -->
