added updated text product design

--- a/_includes/CompSciGraphics_pg.html
+++ b/_includes/CompSciGraphics_pg.html
@@ -108,7 +108,7 @@ Computer Graphics Work</span>
           <h2>OpenGL 4</h2>
             <p>Skeleton rigging and animations</p>
        <img class="display" src="../assets/img/Cover Page.png">
-         <p>Non-Realistic Rendering</p>
+         <p>Non-Realistic Rendering of a 3D model</p>
           <div class="design-image">
      <div class="image-item-start"> <img class="product-design" src="../assets/img/front.png">     </div>
       
