--- a/_includes/ProdDesign_pg.html
+++ b/_includes/ProdDesign_pg.html
@@ -140,10 +140,12 @@ Computer Graphics Work</span>
   <ul>
     <item><details> <summary> Design and develop a childrens toy </summary>
       
-      <p class="info">  THe first assignment completed was a design a chrildrens toy, while I streched the assignment abit to 
-        allow for myself, a chilish man to paly with a sword in a battle royal.
-        We were to concepulise a target market, investigate some avenues to presnt a toy for children, then design and prototype 
-        throughout the development process following some defined specifications.
+      <p class="info">  
+        The first assignment completed was a design for a childrens’ toy, while I stretched the assignment description allowing for my childish instincts to lead me towards playing with a a sword in “Battle Royal” - an adventure based duelling game over controlling digital environments like a real life video game. 
+      </p> <p class="info">  
+        The assignment was to conceptualise a target market, investigate some avenues to present a toy for children through the design process and prototyping to produce an innovative toy that meet the given assignment specifications.
+      </p><p class="info">  
+        My final design fit a duelling sword, multiple ’bases’ where the players would control the domain maintaining control to win the round. The swords interact with the players on touch, through induction, the swords generate voltage spikes that would register a hit on the opponents.
   </p>
 
       <div class="design-image">
@@ -155,20 +157,23 @@ Computer Graphics Work</span>
 
       </details>
 
-      <details>  <summary> design for visual impairment </summary>
-      <p class="discourse-disclaimer">IN this ssingmetn i had suffered a broken schphoid, and was unable to properly prototype and design throughout the year, 
-        so some of the design work is limited. This means hat the final prototype, was less tested and not finsihed to the perfered standard. 
-        Though the concept is there, there are a afew design odificatiosn htat could better allow for the product functionality. 
-     </p> <p class="info"> 
-         We were then in our first year directed to designa nd product prottotypes of  products that were to aid hte 
-        visually impaired with common complicaiotns that they may encounter throughtout their days.
-        IN this scnce it was shopping, and identifying food in the cuboard how much ot there was and what each item is 
-        - for this id eveloped a scanner, that was connected to a food chain.
+      <details>  <summary> Design for Visual Impairment </summary>
 
-        this utlised  a watch, that could scan inhouse items via the stuck onbarcode, to let the user know what things were.
-
-      
-  </p>
+        <p class="discourse-disclaimer">
+          During this project I had suffered a broken scaphoid and was unable to properly prototype and design throughout the year - so some of the design work is limited. This means that the final prototype was less tested and not finished to the preferred standard.
+                  Though the concept is there, there are a few design modifications that could better allow for the product functionality.
+           </p> <p class="info">
+          
+          
+                   In this assignment we were directed to design and produce prototypes of  a product  that would improve the quality of life of those living with visual impairment.
+          
+               </p> <p class="info">
+          
+                 The final design I produced was intended to improve shopping and identifying food in cupboards, register how much of it there was and indicate what each item is
+                  - for this I developed a scanner that was connected to a supermarket foodchains inventory. The system utilised  a watch that could scan in house items via the sticker barcode - letting the user know what things were and to telly consumption of items.
+          
+           </p> 
+          
 
       <div class="design-image">
         <div class="image-item-start"> <img class="product-design" src="../assets/img/frognt.png">     </div>
@@ -182,40 +187,59 @@ Computer Graphics Work</span>
    
   </ul>
   <h3> Product Design 2nd Year</h3><ul>
-    <details>  <summary>  Material investigation and matierals in design.</summary>
-      <p class="info">  I was assigned PLA to research and design with, his involved working to manufacture a prototype, working from recycled material sources. 
-        This was our designed product, that ideally would be the final prodcut given proper manufacturig facilities. This was another group assignment, 
-        presenting a model, promotional video and design package.
+    <details>  <summary>  Material investigation and materials in design.</summary>
+  
+
+ <p class="info">
+  I was assigned PLA to research and design with, this involved working to manufacture a prototype, working from recycled material sources.The intent was that each group was given a different recycled material, and we were to utilise the specific material properties to produce a suitable product from our allocated material. 
+ 
   </p>
+   <p class="info">
+        After much research, and many other concepts we came to a pen. Because of how many pens are produced in the world, and the lack of recyclability of a pen - we decided that the biodegradability of PLA was perfect for the pen that was inevitably intended for the landfill.  </p>
+  <p class="info">This assignment was also to test our understanding of manufacturing processes intended for plastics - having us work with plastics understanding the properties and complications of product manufacturing. 
+ Ideally the result of our design product given proper manufacturing facilities would allow us to understand and produce our finland design considering the material implications. This was another group assignment, presenting a model, promotional video and design package.
+  </p>
+ 
+       
       <iframe src="https://uclive352.autodesk360.com/shares/public/SH919a0QTf3c32634dcffe553c0d54d76321?mode=embed" width="100%" height="480" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
        
   
     
     </details>
       <details>  <summary> Playground equipment design.</summary>
-        <p class="info">  Designed a piece of playground equipment. Intially I had to design a exisitng piece of equipment - 
-          this was more of a CAD exorcise. I was then required to design an entire piece using the full design process, this was a group activity, 
-          presenting a full portfolio on completion.
+        <p class="info">   Designed a piece of playground equipment. Initially I had to design an existing piece of equipment -  this was more of a CAD exercise - inclusive of aspects of mechanical, manufacturing and functional nature relevant to the equipment. </p><p class="info">
+          These details can be seen in the CAD model of the flying below. 
     </p>
        <iframe src="https://uclive352.autodesk360.com/shares/public/SH919a0QTf3c32634dcfe71c24be70af0849?mode=embed" width="100%" height="480" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
-      <iframe src="https://uclive352.autodesk360.com/shares/public/SH919a0QTf3c32634dcfe194429b90d2c308?mode=embed" width="100%" height="480" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
+
+       <p class="info">
+        I was then required to design an entire piece using the full design process, this was a group activity,  presenting a full portfolio on completion.</p><p class="info">
+       
+       
+       Our final design fit local legislation for playgrounds regarding safety, constructed from materials that were specifically chosen to be durable given the environmental conditions and were given their intended use. We produced a climbing frame that was difficult enough for younger children, but still accessible for those that were less agile allowing for confidence to build for heights and climbing abilities alike. </p><p class="info"> It would be a perfect location for games such as tag, playing by yourself or hanging out. The intended market was for 8-13 year olds - allowing people to test their boundaries, while remaining safe.
+        </p>
+       
+       
+       <iframe src="https://uclive352.autodesk360.com/shares/public/SH919a0QTf3c32634dcfe194429b90d2c308?mode=embed" width="100%" height="480" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
     
     
       
       </details>
-        <details>    <summary>  waterclock - mark the passage of time with only a waterpump</summary>
+        <details>    <summary>  Waterclock - mark the passage of time with only a waterpump</summary>
         
-          <p class="info"> 
-            A waterclock utlising THermofluid dynamics was desinga nd manufacuted to mark a 5 mnute interval. 
-            In this hte assingemtnw as a runa clok froma  water source and have it accurately time 5 minutes.
-             IN this assingmetnw ere were not allwoed to use 3D-printed materials and were awarded points for style and funcitnality.
-           </p>
-         
-           <p class="info"> 
-             a simple rachet mechnsuim was ued to control the roation of a water feed wheel, this in turn allowe for a tick at each rachet 
-             of this wheel driving a clock face by a belt. There are signficantmy more feature in this design than first appears, and was
-             completed through various fluid dynamic princples beign calcualted to achieve the dsiened output. This clock achieved 5 minutes with wheel and rachet were correclty aligned.
-            </p>
+          
+          <p class="info">
+
+            A water-clock utilising thermofluid dynamics was designed and manufactured to mark a 5 minute interval from a water source with a pump.
+                                 In this assignment we were not allowed to use 3D-printed materials and were awarded points for style and functionality.
+                     
+                         </p>
+                <p class="info">
+             
+                        My design utilised a simple ratchet mechanism that was used to control the rotation of a water feed wheel, this in turn allowed for a tick at each ratchet of this wheel driving a clock face by a belt. There are significantly more features in this design than first appears, and was completed through various fluid dynamic principles being calculated to achieve the required performance. This clock achieved 5 minutes with wheel and rachet correctly aligned.
+                    
+             </p>
+           
          
             <div class="design-image">
              <div class="image-item-start"> <img class="product-design" src="../assets/img/waterclock_front.JPG">     </div>
@@ -224,16 +248,32 @@ Computer Graphics Work</span>
                    </div>
         </details>
           <details>    <summary>  Folding Chair Redesign.</summary>
-            <p class="info"> Redesign of a folding chair. The first two are models of two chairs we had 
-              as reference strcutures, these chairs where then used to redesign teh cair depending on our target market, which was a festival chair. The Third mopdel is the 2nd development of my design iterations.
-              THe 4th model is our final design fitted with a cargo net.
-           </p>
+            <p class="info">
+
+              Redesign of a folding chair. The first two are models of two chairs we had been assigned 
+                           As reference structures, these chairs’ mechanical linkages were then used as a base to redesign over. We were required to follow the design process considering the target market - we chose to target festival goers - producing a  festival chair. 
+             </p>
+             <p class="info">
+             
+             The third CAD model is the 2nd design iteration that I prototyped as an investigative model. The intent was to reduce the folded footprint of the chair in transport.
+             </p>
+             <p class="info">
+             
+             The 4th model is the final design fitted with a cargo net, made to be comfortable and able to be store out of the way - without resting on the outside of a tent or alongside a car. 
+             </p>
+             
            <iframe src="https://uclive352.autodesk360.com/shares/public/SH919a0QTf3c32634dcfa545429400bce58c?mode=embed" width="100%" height="480" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
            <iframe src="https://uclive352.autodesk360.com/shares/public/SH919a0QTf3c32634dcf45389b6db30b2bb5?mode=embed" width="100%" height="480" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
            <iframe src="https://uclive352.autodesk360.com/shares/public/SH35dfcQT936092f0e4331f8ba2087aa8585?mode=embed" width="100%" height="480" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
            <iframe src="https://uclive352.autodesk360.com/shares/public/SH512d4QTec90decfa6e9851bb404499416b?mode=embed" width="100%" height="480" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
           
-           <p class="info">1:3 Functional Scale model of Final Design</p>
+           <p class="info">1:4 Functional Scale model of Final Design:</p>
+           <p class="info">
+
+            This was then made into 1:4 scale model produced from hand bent stainless steel and lathe turned brass, including metal for screws and the crossmember as well as brazing the pivots on stainless steel  legs. The net was made from elastic and was formed over a template to get the correct shape so it would fit the seat of the chair. The model can be seen below - an identical representation of the CAD model.
+            
+            </p>
+            
            <div class="design-image">
            <div class="image-item-start"> <img class="product-design" src="../assets/img/front chair.JPG">     </div>
            <div > <img class="product-design" src="../assets/img/chair_closing.JPG">     </div>
@@ -245,15 +285,22 @@ Computer Graphics Work</span>
   </ul>
     <h3> Product Design 3rd Year</h3>    
     <ul>
-      <details>  <summary>  Wall bike mount via various desgn and manufacturing techniques.</summary>
+      <details>  <summary>  Wall bike mount via various design and manufacturing techniques.</summary>
       
        
-          <p class="info"> The first third year project was to design a bike wall mount using flatpack fastenerless construction, this was designed to hold the weight of a bicycle 
-            and was tested at the end of the assignment to specified Factor of saftey. The second assingmetn was to use FEA and Generative Design to develop this design to hold within 
-            a specified weight limit at a defined FoS. In my instace I used generative design, alongsize FEA to determine mounting points and criticalr regions that would allow for
-             the gernated bike mount to meet this defined prequsite.  The design was model with consdieration of a real bike to with weights to scale for testing. In this assingment, 
-             I changed groups betwween phases 1 and 2 working froma differnt base point.
-        </p>
+        <p class="info">
+
+          The first third year project was to design a bike wall mount using flatpack fastenerless construction, this was designed to hold the weight of a bicycle
+                      and was tested at the end of the assignment to specified Factor of Safety. 
+          </p> <p class="info">
+          
+          The second part of the assignment was to use FEA and Generative Design to develop this design to hold within
+                      a specified weight limit at a defined FoS. In my instance I used generative design, alongside FEA to determine mounting points and critical regions that would allow for
+                       the generated bike mount to meet this defined prerequisite.  
+          The design was modelled with consideration of a real bike with weights to scale for testing. </p><p class="info">
+           In this assignment,  I changed groups between phases 1 and 2 working from a different base point. My apologies - I have yet to pull out  images of the first phase from my work.  </p>
+          
+          
      
         
            <!-- <iframe src="https://uclive352.autodesk360.com/shares/public/SH919a0QTf3c32634dcf7c0eccdc215b43a7?mode=embed" width="640" height="480" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
