added updated text product design

--- a/_includes/ProdDesign_pg.html
+++ b/_includes/ProdDesign_pg.html
@@ -308,16 +308,20 @@ Computer Graphics Work</span>
               <iframe src="https://uclive352.autodesk360.com/shares/public/SH919a0QTf3c32634dcf66e730068e3642c2?mode=embed" width="100%" height="480" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
         
       </details>
-        <details>  <summary> A household appliance - Electrical knife redesign.</summary>
-          <p class="info"> In the second thrid year assignment a handheld electrical appliance was to be reesigned from scratch. This incoporated internal componetns that were outsourced, or developed alongside. 
-            The asignmetn lead hevely into daftey, and project managmetn tehniques to ensure integirty of boh hte design process and the product for consumer applciations. working through developing hte mechaincal 
-            systems in cecetulised work, and into the development inclusing CAD, and mechinical compents the finald design  was output meeeting the defined speficications.
-          </p><p class="discourse-disclaimer"> 
-           In this assignment ther was internal trouble within the group, this was because hte other tema memeber didn;t present the required work to adequately support the project. 
-            This was especially evident in the finalisation of the peoject, and can be seen in the overall qality and consistance the basis of the 
-            seccond part of the assingmetn was completed by myself without any support from other emmebers of the group - this includedhte fulll development process fo the design, 
-            final cad work and technical drawing packages as well as the bulk of the portfolio. 
-          </p>
+        <details>  <summary> A household appliance redesign- Electrical knife.</summary>
+          <p class="discourse-disclaimer"> 
+          
+            In this assignment there was internal trouble within the group, this was because the other team member didn’t present the required work to adequately support the project. This was especially evident in the finalisation of the project, and can be seen in the overall quality and consistency the basis of the second part of the assignment was completed by myself without any support from other members of the group. This included the full development process of the design, final CAD work and technical drawing packages as well as the bulk of the portfolio.
+            
+                      </p>
+          <p class="info">
+            In the second third year assignment a handheld electrical appliance was to be redesigned from scratch. This incorporated internal components that were outsourced, or developed alongside. The assignment led heavily into safety, and project management techniques to ensure integrity of both the design process and the product for consumer applications. Working through developing the mechanical systems in conceptualised work, and into the development including CAD, and mechanical components the final design was output meeting the defined product specifications.
+            
+             </p>
+              <p class="info">
+            The product intent was a home butcher utility, where it could cut through done and meat alike - allowing for effortless dissection of game ready for consumption. The product was intended to be waterproof, and easy to clean.
+             </p>
+    
           <p class="info"> Electric Knife Final Concept Design: </p>
           <div >   <img width="100%" src="../assets/img/Final Concept - Prod213 - elctric knife.png">     </div>  
           <p class="info">  Electric Knife Final Design Soloution: </p>
