--- a/_includes/CompSciGraphics_pg.html
+++ b/_includes/CompSciGraphics_pg.html
@@ -71,7 +71,7 @@ Computer Graphics Work</span>
 	   <img class="prof" src="../assets/img/Liam_DP.jpg">
 	  
 	<!-- Sign and date the page, it's only polite! -->
-	<credit class="prof"><br>  Christchurch, New Zealand <br> Date of Birth: 26/03/1995 <br>
+	<credit class="prof"><br>  Christchurch, New Zealand <br>
      Qualificatinos from the <br>University of Canterbury: <br>
      Postgraduate Diploma  of Computer Science  <br>
       Bachelor of Industrial Product Design  <br> Bachelor of Computer Science  <br> 
