--- a/_includes/ProdDesign_pg.html
+++ b/_includes/ProdDesign_pg.html
@@ -138,7 +138,7 @@ Computer Graphics Work</span>
 </p>
   <h3> Product Design 1st Year</h3>
   <ul>
-    <item><details> <summary> Design and develop a childrens toy </summary>
+    <item><details open> <summary> Design and develop a childrens toy </summary>
       
       <p class="info">  
         The first assignment completed was a design for a childrens’ toy, while I stretched the assignment description allowing for my childish instincts to lead me towards playing with a a sword in “Battle Royal” - an adventure based duelling game over controlling digital environments like a real life video game. 
@@ -157,7 +157,7 @@ Computer Graphics Work</span>
 
       </details>
 
-      <details>  <summary> Design for Visual Impairment </summary>
+      <details open>  <summary> Design for Visual Impairment </summary>
 
         <p class="discourse-disclaimer">
           During this project I had suffered a broken scaphoid and was unable to properly prototype and design throughout the year - so some of the design work is limited. This means that the final prototype was less tested and not finished to the preferred standard.
@@ -187,7 +187,7 @@ Computer Graphics Work</span>
    
   </ul>
   <h3> Product Design 2nd Year</h3><ul>
-    <details>  <summary>  Material investigation and materials in design.</summary>
+    <details open>  <summary>  Material investigation and materials in design.</summary>
   
 
  <p class="info">
@@ -206,7 +206,7 @@ Computer Graphics Work</span>
   
     
     </details>
-      <details>  <summary> Playground equipment design.</summary>
+      <details open>  <summary> Playground equipment design.</summary>
         <p class="info">   Designed a piece of playground equipment. Initially I had to design an existing piece of equipment -  this was more of a CAD exercise - inclusive of aspects of mechanical, manufacturing and functional nature relevant to the equipment. </p><p class="info">
           These details can be seen in the CAD model of the flying below. 
     </p>
@@ -225,7 +225,7 @@ Computer Graphics Work</span>
     
       
       </details>
-        <details>    <summary>  Waterclock - mark the passage of time with only a waterpump</summary>
+        <details open>    <summary>  Waterclock - mark the passage of time with only a waterpump</summary>
         
           
           <p class="info">
@@ -247,7 +247,7 @@ Computer Graphics Work</span>
                 <div>  <img class="product-design" src="../assets/img/back_mech_waterclock.JPG">     </div>
                    </div>
         </details>
-          <details>    <summary>  Folding Chair Redesign.</summary>
+          <details open>    <summary>  Folding Chair Redesign.</summary>
             <p class="info">
 
               Redesign of a folding chair. The first two are models of two chairs we had been assigned 
@@ -285,7 +285,7 @@ Computer Graphics Work</span>
   </ul>
     <h3> Product Design 3rd Year</h3>    
     <ul>
-      <details>  <summary>  Wall bike mount via various design and manufacturing techniques.</summary>
+      <details open>  <summary>  Wall bike mount via various design and manufacturing techniques.</summary>
       
        
         <p class="info">
@@ -308,7 +308,7 @@ Computer Graphics Work</span>
               <iframe src="https://uclive352.autodesk360.com/shares/public/SH919a0QTf3c32634dcf66e730068e3642c2?mode=embed" width="100%" height="480" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
         
       </details>
-        <details>  <summary> A household appliance redesign- Electrical knife.</summary>
+        <details open>  <summary> A household appliance redesign- Electrical knife.</summary>
           <p class="discourse-disclaimer"> 
           
             In this assignment there was internal trouble within the group, this was because the other team member didn’t present the required work to adequately support the project. This was especially evident in the finalisation of the project, and can be seen in the overall quality and consistency the basis of the second part of the assignment was completed by myself without any support from other members of the group. This included the full development process of the design, final CAD work and technical drawing packages as well as the bulk of the portfolio.
@@ -337,7 +337,7 @@ Computer Graphics Work</span>
            </div> 
         
         </details>
-          <details>   <summary> Final year project.</summary>
+          <details open>   <summary> Final year project.</summary>
           
           
           </details>
